ADDED IMAGE GALLERY CRUD